{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 33,
  "lineage": "5c52fcf6-3641-1f82-3a1a-4a9bde89752a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "taxyzz_instance_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009c5f630e96948cb",
            "arn": "arn:aws:ec2:us-west-2:675067944836:instance/i-0087ce908b5509208",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0087ce908b5509208",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pem-taxyzz",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0309f27cbb386b9ed",
            "private_dns": "ip-10-0-1-20.taxyzz.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ad0d3556992363e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021edf8b923c7961b",
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-instance-backend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-instance-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d3f008bd6926afb"
            ]
          },
          "dependencies": [
            "aws_security_group.taxyzz_backend_group",
            "aws_subnet.taxyzz_subnet_public_zone_a",
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "taxyzz_instance_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009c5f630e96948cb",
            "arn": "arn:aws:ec2:us-west-2:675067944836:instance/i-010b30e341a5bc55c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010b30e341a5bc55c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pem-taxyzz",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f7d80c173599a33",
            "private_dns": "ip-10-0-1-10.taxyzz.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "44.230.165.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03768b30e0f58fc94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021edf8b923c7961b",
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-instance-nginx"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-instance-nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0341cc71b2f9cd6a8"
            ]
          },
          "dependencies": [
            "aws_security_group.taxyzz_nginx_group",
            "aws_subnet.taxyzz_subnet_public_zone_a",
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "taxyzz_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:internet-gateway/igw-01de499c579a723e4",
            "id": "igw-01de499c579a723e4",
            "owner_id": "675067944836",
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-igw"
            },
            "vpc_id": "vpc-0467692758b00891f"
          },
          "dependencies": [
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "taxyzz_igw_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0393c5c1d353fa7ba",
            "association_id": "eipassoc-05a15169c84b100d7",
            "connectivity_type": "public",
            "id": "nat-0452c91e0cfcc19a5",
            "network_interface_id": "eni-09df6c2a3377dd31b",
            "private_ip": "10.0.1.34",
            "public_ip": "35.166.142.47",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-021edf8b923c7961b"
          },
          "dependencies": [
            "aws_subnet.taxyzz_subnet_public_zone_a",
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "taxyzz_route_gtw_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:route-table/rtb-0e4312499de0d55f5",
            "id": "rtb-0e4312499de0d55f5",
            "owner_id": "675067944836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0452c91e0cfcc19a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-rt-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467692758b00891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.taxyzz_igw_nat",
            "aws_subnet.taxyzz_subnet_public_zone_a",
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "taxyzz_route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:route-table/rtb-008e7cec6b9f83fe9",
            "id": "rtb-008e7cec6b9f83fe9",
            "owner_id": "675067944836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01de499c579a723e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-rt-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-rt-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467692758b00891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.taxyzz_igw",
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "taxyzz_route_table_association_igw_public_zone_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050b5b67139c83f80",
            "route_table_id": "rtb-008e7cec6b9f83fe9",
            "subnet_id": "subnet-021edf8b923c7961b"
          },
          "dependencies": [
            "aws_internet_gateway.taxyzz_igw",
            "aws_route_table.taxyzz_route_igw",
            "aws_subnet.taxyzz_subnet_public_zone_a",
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "taxyzz_route_table_association_igw_public_zone_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d8a095adc7a2967",
            "route_table_id": "rtb-008e7cec6b9f83fe9",
            "subnet_id": "subnet-04891fbe4064c7a1d"
          },
          "dependencies": [
            "aws_internet_gateway.taxyzz_igw",
            "aws_route_table.taxyzz_route_igw",
            "aws_subnet.taxyzz_subnet_public_zone_b",
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "taxyzz_backend_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:security-group/sg-06d3f008bd6926afb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d3f008bd6926afb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "taxyzz-dev-nginx-sg20231020015156401500000001",
            "name_prefix": "taxyzz-dev-nginx-sg",
            "owner_id": "675067944836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-backend-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467692758b00891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "taxyzz_database_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:security-group/sg-0187ce8315d7c8e8a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0187ce8315d7c8e8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "taxyzz-dev-nginx-sg20231020020512971600000001",
            "name_prefix": "taxyzz-dev-nginx-sg",
            "owner_id": "675067944836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-database-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467692758b00891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "taxyzz_nginx_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:security-group/sg-0341cc71b2f9cd6a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0341cc71b2f9cd6a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "taxyzz-dev-nginx-sg20231018023315945500000001",
            "name_prefix": "taxyzz-dev-nginx-sg",
            "owner_id": "675067944836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-nginx-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467692758b00891f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "taxyzz_subnet_public_zone_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:subnet/subnet-021edf8b923c7961b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021edf8b923c7961b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675067944836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-public-a-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-public-a-vpc"
            },
            "vpc_id": "vpc-0467692758b00891f"
          },
          "dependencies": [
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "taxyzz_subnet_public_zone_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:subnet/subnet-04891fbe4064c7a1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04891fbe4064c7a1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675067944836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-public-b-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-public-b-vpc"
            },
            "vpc_id": "vpc-0467692758b00891f"
          },
          "dependencies": [
            "aws_vpc.taxyzz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "taxyzz_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675067944836:vpc/vpc-0467692758b00891f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047ce61b5c26e41b8",
            "default_route_table_id": "rtb-0d20628d5dd77150a",
            "default_security_group_id": "sg-0de720d67ccb98cbd",
            "dhcp_options_id": "dopt-0db5412870bc6abef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0467692758b00891f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d20628d5dd77150a",
            "owner_id": "675067944836",
            "tags": {
              "Environment": "dev",
              "Name": "taxyzz-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "taxyzz-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}